--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,7 @@ six==1.17.0
 typing_extensions==4.13.2
 urllib3==2.4.0
 azure-functions==1.20.0
+
+# Added dependencies for CloudNetDraw library support
+azure-mgmt-resourcegraph==8.0.0
+PyYAML==6.0
